[tool.poetry]
name = "chatbot-transformer"
version = "0.1.0"
description = ""
authors = ["caglanakpinar <cakpinar23@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
tensorflow-datasets = "^4.9.7"
flask = "^3.1.0"
huggingface = "^0.0.1"
huggingface-hub = "^0.27.0"
datasets = "^3.2.0"
pre-commit = "^4.0.1"
tensorflow = "2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
