[tool.poetry]
name = "chatbot-transformer"
version = "0.1.0"
description = ""
authors = ["caglanakpinar <cakpinar23@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.1.0"
pre-commit = "^4.0.1"
pyarrow = "^18.1.0"
tensorflow = "2.13.1"
tensorflow-datasets = "4.9.7"
pandas = "2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
